<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gprosoft.incrowdapp.ui.view.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.gprosoft.incrowdapp.ui.view.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_following"
        android:name="com.gprosoft.incrowdapp.ui.view.following.FollowingFragment"
        android:label="@string/title_following"
        tools:layout="@layout/fragment_following" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.gprosoft.incrowdapp.ui.view.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_addevent"
        android:name="com.gprosoft.incrowdapp.ui.view.addevent.AddEventFragment"
        android:label="@string/title_addevent"
        tools:layout="@layout/fragment_add_event" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.gprosoft.incrowdapp.ui.view.home.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/navigation_modifyprofile"
        android:name="com.gprosoft.incrowdapp.ui.view.profile.modify_profile.ModifyProfileFragment"
        android:label="@string/title_modifyprofile"
        tools:layout="@layout/fragment_modify_profile" />

    <fragment
        android:id="@+id/navigation_myevents"
        android:name="com.gprosoft.incrowdapp.ui.view.profile.myevents.MyEventsFragment"
        android:label="@string/title_myevents"
        tools:layout="@layout/fragment_my_events" />

    <fragment
        android:id="@+id/navigation_myeventsfollowing"
        android:name="com.gprosoft.incrowdapp.ui.view.profile.myeventsfollowing.MyEventsFollowingFragment"
        android:label="@string/title_myeventsfollowing"
        tools:layout="@layout/fragment_my_events_following" />

    <fragment
        android:id="@+id/navigation_eventnoparticipant"
        android:name="com.gprosoft.incrowdapp.ui.view.event.EventNoParticipantFragment"
        android:label="@string/title_eventnoparticipant"
        tools:layout="@layout/fragment_event_no_participant" />

</navigation>